--- a/lecture-notes/4-lecture.ipynb
+++ b/lecture-notes/4-lecture.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Week 4: Style\n",
+    "# Week 4: Style\n",
     "\n",
-    "### Screencasts\n",
+    "## Screencasts\n",
     "\n",
     "https://drive.google.com/open?id=0B4OAOue0b3VMcjZpV1RfeEdsR0U\n",
     "\n",
-    "### Readings\n",
+    "## Readings\n",
     "\n",
     "- Python Foundation. [Style Guide for Python\n",
     "Code](https://www.python.org/dev/peps/pep-0008/) (PEP 8). pep-0008.txt @\n",
@@ -21,7 +21,7 @@
     "  Problem](https://www.stat.cmu.edu/Exams/mosteller.pdf).\" Journal of the\n",
     "American Statistical Association 58.302 (1963): 275–309.\n",
     "\n",
-    "### Lecture Notes\n",
+    "## Lecture Notes\n",
     "\n",
     "From [Wikipedia](https://en.wikipedia.org/wiki/Automated_readability_index):\n",
     "\n",
@@ -43,32 +43,35 @@
     "Grade 12, the highest US secondary-school grade before college, corresponds to\n",
     "the reading level of a 17-year-old. paragraph parser length of sentences and paragraphs.\n",
     "\n",
-    "```\n",
-    "# can you see some problems with the above definition?\n",
-    "# lets try to replicate the formula!\n",
+    "Can you see a problem with the above definition? Let's try to replicate the forumula! But first, meet [TextBlob](https://textblob.readthedocs.org/en/dev/). It will give us more powerful tools for reading and parsing, so that we do not have to reinvent the wheel. We wrote a simple word tokenizer in the previous lecture. But let's now use someone else's, more polished solution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demistyfying other people's code\n",
     "\n",
-    "words = \n",
-    "chars = \n",
-    "sents = \n",
+    "First run:\n",
     "\n",
-    "```\n",
-    "### Home Experiments\n"
+    "`$ pip install -U textblob`. \n",
+    "\n",
+    "How well do you understand `pip`? Explain what it does. Where does it install the libraries? Let's take a detour to find them.\n",
+    "\n",
+    "`$ pip list`\n",
+    "\n",
+    "`$ pip show textblob`\n",
+    "\n",
+    "navigate to the directory\n",
+    "\n",
+    "Open `tokenizers.py`. Follow the trail to `nltk`. `$ grep -r \"word_tokenize\"` \n",
+    "\n",
+    "Explore http://www.cis.upenn.edu/~treebank/tokenizer.sed and https://www.cis.upenn.edu/~treebank/\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import textblob"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
