--- a/lecture-notes/4-lecture.ipynb
+++ b/lecture-notes/4-lecture.ipynb
@@ -16,7 +16,7 @@
     "Code](https://www.python.org/dev/peps/pep-0008/) (PEP 8). pep-0008.txt @\n",
     "6126:4c7172052ed3.\n",
     "- Patel, Amit et. al. [Google Python Style\n",
-    "Guide](https://google.github.io/styleguide/pyguide.html_), Revision 2.5.9.\n",
+    "Guide](https://google.github.io/styleguide/pyguide.html), Revision 2.5.9.\n",
     "- Mosteller, Frederick, and David L. Wallace. \"[Inference in an Authorship\n",
     "  Problem](https://www.stat.cmu.edu/Exams/mosteller.pdf).\" Journal of the\n",
     "American Statistical Association 58.302 (1963): 275–309.\n",
