update the notebook

--- a/lecture-notes/4-lecture.ipynb
+++ b/lecture-notes/4-lecture.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "navigate to the directory\n",
     "\n",
-    "Open `tokenizers.py`. Follow the trail to `nltk`. `$ grep -r \"word_tokenize\"` \n",
+    "Open `tokenizers.py`. Follow the trail to `nltk`. `cd` into `tokenizer/` directory `$ grep -r \"word_tokenize\".` \n",
     "\n",
     "Explore http://www.cis.upenn.edu/~treebank/tokenizer.sed and https://www.cis.upenn.edu/~treebank/\n"
    ]
