--- a/lecture-notes/4-lecture.ipynb
+++ b/lecture-notes/4-lecture.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Week 4: Style\n",
+    "# Week 4: Style I\n",
     "\n",
     "## Screencasts\n",
     "\n",
@@ -66,7 +66,7 @@
     "\n",
     "Open `tokenizers.py`. Follow the trail to `nltk`. `cd` into `tokenizer/` directory `$ grep -r \"word_tokenize\".` \n",
     "\n",
-    "Explore http://www.cis.upenn.edu/~treebank/tokenizer.sed and https://www.cis.upenn.edu/~treebank/\n"
+    "**Explore**: http://www.cis.upenn.edu/~treebank/tokenizer.sed and https://www.cis.upenn.edu/~treebank/\n"
    ]
   },
   {
