almost done with 5

--- a/lecture-notes/4-lecture.ipynb
+++ b/lecture-notes/4-lecture.ipynb
@@ -21,52 +21,7 @@
     "  Problem](https://www.stat.cmu.edu/Exams/mosteller.pdf).\" Journal of the\n",
     "American Statistical Association 58.302 (1963): 275–309.\n",
     "\n",
-    "## Lecture Notes\n",
-    "\n",
-    "From [Wikipedia](https://en.wikipedia.org/wiki/Automated_readability_index):\n",
-    "\n",
-    "> automated readability index (ARI) is a readability test designed to gauge\n",
-    "the understandability of a text. Like the Flesch–Kincaid grade level, Gunning fog\n",
-    "index, SMOG index, Fry readability formula, and Coleman–Liau index, it\n",
-    "produces an approximate representation of the US grade level needed to\n",
-    "comprehend the text.\n",
-    ">\n",
-    "> The formula for calculating the automated readability index is given below:\n",
-    ">\n",
-    "> (4.71 * charachters/words) + (0.5 * words/sentences) - 21.43\n",
-    ">\n",
-    "> where characters is the number of letters and numbers, words is the number of\n",
-    "spaces, and sentences is the number of sentences.\n",
-    ">\n",
-    "> As a rough guide, US grade level 1 corresponds to ages 6–8. Reading level\n",
-    "grade 8 corresponds to the typical reading level of a 14-year-old US child.\n",
-    "Grade 12, the highest US secondary-school grade before college, corresponds to\n",
-    "the reading level of a 17-year-old. paragraph parser length of sentences and paragraphs.\n",
-    "\n",
-    "Can you see a problem with the above definition? Let's try to replicate the forumula! But first, meet [TextBlob](https://textblob.readthedocs.org/en/dev/). It will give us more powerful tools for reading and parsing, so that we do not have to reinvent the wheel. We wrote a simple word tokenizer in the previous lecture. But let's now use someone else's, more polished solution."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Demistyfying other people's code\n",
-    "\n",
-    "First run:\n",
-    "\n",
-    "`$ pip install -U textblob`. \n",
-    "\n",
-    "How well do you understand `pip`? Explain what it does. Where does it install the libraries? Let's take a detour to find them.\n",
-    "\n",
-    "`$ pip list`\n",
-    "\n",
-    "`$ pip show textblob`\n",
-    "\n",
-    "navigate to the directory\n",
-    "\n",
-    "Open `tokenizers.py`. Follow the trail to `nltk`. `cd` into `tokenizer/` directory `$ grep -r \"word_tokenize\".` \n",
-    "\n",
-    "**Explore**: http://www.cis.upenn.edu/~treebank/tokenizer.sed and https://www.cis.upenn.edu/~treebank/\n"
+    "## Lecture Notes"
    ]
   },
   {
@@ -112,6 +67,29 @@
    "source": [
     "blob?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# automated readability index (ARI) \n",
+    "# (4.71 * characters/words) + (0.5 * words/sentences) - 21.43\n",
+    "\n",
+    "type(blob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
