add fifth experiment

--- a/lecture-notes/5-lecture.ipynb
+++ b/lecture-notes/5-lecture.ipynb
@@ -12,7 +12,13 @@
     "\n",
     "## Readings\n",
     "\n",
-    "- E.A. Smith. [Automated Readability Index](, 1967.\n",
+    "- E.A. Smith. [Automated Readability Index](https://github.com/denten-courses/computing-context/blob/master/readings/ari.pdf), 1967.\n",
+    "- Stubbs, Michael. “[Conrad in the Computer: Examples of Quantitative Stylistic Methods](http://lal.sagepub.com/content/14/1/5.full.pdf+html).” Language and Literature 14, no. 1 (February 1, 2005): 5–24.\n",
+    "- Fish, Stanley E. “[What Is Stylistics and Why Are They Saying Such Terrible Things about It?-Part II](http://www.jstor.org/stable/303144).” Boundary 2 8, no. 1 (1979): 129–46.\n",
+    "\n",
+    "## Home Experiment\n",
+    "\n",
+    "[Writers Battle]\n",
     "\n",
     "## Lecture Notes:"
    ]
@@ -350,6 +356,17 @@
    ],
    "source": [
     "ari"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Interlude\n",
+    "\n",
+    "We have a number! What does it mean? How to verify models? Garbage in, garbage out. What is stylistics and why are people saying such terrible things about it."
    ]
   },
   {
