updating notes for lecture 5

--- a/lecture-notes/5-lecture.ipynb
+++ b/lecture-notes/5-lecture.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "## Home Experiment\n",
     "\n",
-    "[Writers Battle]\n",
+    "[Writers Battle](https://github.com/denten-courses/computing-context/blob/master/experiments/5-experiment/battle.md)\n",
     "\n",
     "## Lecture Notes:"
    ]
