--- a/lecture-notes/5-lecture.ipynb
+++ b/lecture-notes/5-lecture.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "## Home Experiment\n",
     "\n",
-    "[Writers Battle](https://github.com/denten-courses/computing-context/blob/master/experiments/5-experiment/battle.md)\n",
+    "- [Writers Battle](https://github.com/denten-courses/computing-context/blob/master/experiments/5-experiment/battle.md)\n",
     "\n",
     "## Lecture Notes:"
    ]
@@ -1002,15 +1002,6 @@
     "    word = Word(item)\n",
     "    print word.pluralize()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
