--- a/lecture-notes/5-lecture.ipynb
+++ b/lecture-notes/5-lecture.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Week 4: Style I\n",
+    "# Week 4: Style II\n",
     "\n",
     "## Screencasts\n",
     "\n",
